--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,5 @@ scikit-learn==1.3.0
 optuna==3.5.0
 tqdm==4.66.1
 
-geopandas==0.14.2 # install via conda in Dockerfile to get GDAL working properly
-shapely==2.0.1 # check if we can remove this
+geopandas==0.14.2
 pyarrow==14.0.1 # needed by geopandas for saving .parquet
